fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
     flex: 0;
     max-width: 0;
     transition: flex 0.2s ease, max-width 0.2s ease;
+    overflow: hidden;
   }
 
   .display {
